Modified: hello world

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -82,3 +82,25 @@
   publisher={Vision},
   preview={wave-mechanics.gif}
 }
+
+
+@article{csikszentmihalyi1997finding,
+  title={From Finding Flow},
+  author={Csikszentmihalyi, Mihaly},
+  journal={Psychology Today},
+  volume={30},
+  number={4},
+  pages={46--48},
+  year={1997},
+  publisher={Sussex Publishers, Inc.},
+  address={New York}
+}
+
+@book{napier1987masks,
+  title={Masks, Transformation, and Paradox},
+  author={Napier, A. David},
+  year={1987},
+  publisher={University of California Press},
+  isbn={9780520045330},
+  note={Foreword by Rodney Needham}
+}
