Added: progress on hello world

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -104,3 +104,22 @@
   isbn={9780520045330},
   note={Foreword by Rodney Needham}
 }
+
+@book{jung1921psychological,
+  title={Psychological Types},
+  author={Jung, C.G.},
+  year={1921},
+  publisher={Princeton University Press},
+  address={Princeton, NJ},
+  note={Reprinted in Collected Works, Vol. 6, 1923/1964}
+}
+
+@book{herbert1965dune,
+  title={Dune},
+  author={Herbert, Frank},
+  year={1965},
+  publisher={Chilton Books},
+  address={United States},
+  series={Dune series},
+  note={Originally published as two separate serials in Analog magazine. It tied with Roger Zelazny's This Immortal for the Hugo Award in 1966 and it won the inaugural Nebula Award for Best Novel.}
+}
