Modified: hello world

--- a/assets/bibliography/2023-07-25-hello-world.bib
+++ b/assets/bibliography/2023-07-25-hello-world.bib
@@ -37,3 +37,11 @@
   series={Dune series},
   note={Originally published as two separate serials in Analog magazine. It tied with Roger Zelazny's This Immortal for the Hugo Award in 1966 and it won the inaugural Nebula Award for Best Novel.}
 }
+
+@misc{chaucer2023,
+  author = {Chaucer, Geoffrey},
+  title = {1.1 General Prologue},
+  howpublished = {\url{https://chaucer.fas.harvard.edu/pages/general-prologue-0}},
+  year = {2023},
+  note = {Accessed: 2023-07-25}
+}
