--- a/assets/bibliography/2023-07-25-hello-world.bib
+++ b/assets/bibliography/2023-07-25-hello-world.bib
@@ -4,7 +4,7 @@
   journal={Psychology Today},
   volume={30},
   number={4},
-  pages={46--48},
+  pages={46-48},
   year={1997},
   publisher={Sussex Publishers, Inc.},
   address={New York}
@@ -14,9 +14,7 @@
   title={Masks, Transformation, and Paradox},
   author={Napier, A. David},
   year={1987},
-  publisher={University of California Press},
-  isbn={9780520045330},
-  note={Foreword by Rodney Needham}
+  publisher={University of California Press}
 }
 
 @book{jung1921psychological,
@@ -32,16 +30,13 @@
   title={Dune},
   author={Herbert, Frank},
   year={1965},
-  publisher={Chilton Books},
-  address={United States},
-  series={Dune series},
-  note={Originally published as two separate serials in Analog magazine. It tied with Roger Zelazny's This Immortal for the Hugo Award in 1966 and it won the inaugural Nebula Award for Best Novel.}
+  note={Penguin 2005 Edition}
 }
 
-@misc{chaucer2023,
+@misc{chaucer1400,
   author = {Chaucer, Geoffrey},
-  title = {1.1 General Prologue},
+  title = {Canterbury Tales},
   howpublished = {\url{https://chaucer.fas.harvard.edu/pages/general-prologue-0}},
-  year = {2023},
+  year = {c.1400},
   note = {Accessed: 2023-07-25}
 }
