Modified: citation styles

--- a/assets/bibliography/2023-07-25-hello-world.bib
+++ b/assets/bibliography/2023-07-25-hello-world.bib
@@ -4,7 +4,7 @@
   journal={Psychology Today},
   volume={30},
   number={4},
-  pages={46-48},
+  pages={46-48; 70-71},
   year={1997},
   publisher={Sussex Publishers, Inc.},
   address={New York}
