Added: dfw > hello world

--- a/assets/bibliography/2023-07-25-hello-world.bib
+++ b/assets/bibliography/2023-07-25-hello-world.bib
@@ -40,3 +40,11 @@
   year = {c.1400},
   note = {Accessed: 2023-07-25}
 }
+
+@book{wallace2009,
+    author = {Wallace, David Foster},
+    title = {This Is Water: Some Thoughts, Delivered on a Significant Occasion, about Living a Compassionate Life},
+    year = {2009},
+    publisher = {Little, Brown and Company},
+    note = {Originally delivered as a commencement speech at Kenyon College on May 21, 2005.}
+}
