Modified: hello world bib

--- a/assets/bibliography/2023-07-25-hello-world.bib
+++ b/assets/bibliography/2023-07-25-hello-world.bib
@@ -48,3 +48,15 @@
     publisher = {Little, Brown and Company},
     note = {Originally delivered as a commencement speech at Kenyon College on May 21, 2005.}
 }
+
+@book{oakeshott1991,
+    author = {Michael Oakeshott},
+    title = {Rationalism in Politics and Other Essays},
+    editor = {T. Fuller},
+    year = {1991},
+    note = {Original edition 1962, London: Methuen},
+    edition = {New and Expanded},
+    publisher = {Liberty Fund},
+    address = {Indianapolis},
+    series = {RP}
+}
