Modified: readings and bibliography

--- a/assets/bibliography/general_bibliography.bib
+++ b/assets/bibliography/general_bibliography.bib
@@ -60,3 +60,31 @@
     address = {Indianapolis},
     series = {RP}
 }
+
+@article{coates2022cicero,
+  title={Cicero’s Treatment of Sulla in the Pro Roscio Amerino},
+  author={Coates, Gregory},
+  journal={The Classical Quarterly},
+  volume={72},
+  number={2},
+  pages={595--610},
+  year={2022}
+}
+
+@article{badian1962waiting,
+  title={Waiting for Sulla},
+  author={Badian, Ernst},
+  journal={The Journal of Roman Studies},
+  volume={52},
+  pages={47--61},
+  year={1962}
+}
+
+@article{badian1964where,
+  title={Where was Sisenna?},
+  author={Badian, Ernst},
+  journal={Athenaeum},
+  volume={42},
+  pages={422--431},
+  year={1964}
+}
