Added: fukuyama reference

--- a/assets/bibliography/general_bibliography.bib
+++ b/assets/bibliography/general_bibliography.bib
@@ -61,6 +61,16 @@
     series = {RP}
 }
 
+@book{fukuyama1992end,
+  title={The End of History and the Last Man},
+  author={Fukuyama, Francis},
+  publisher={Free Press},
+  year={1992},
+  isbn={978-0-02-910975-5},
+  pages={418},
+  language={English}
+}
+
 @article{coates2022cicero,
   title={Cicero’s Treatment of Sulla in the Pro Roscio Amerino},
   author={Coates, Gregory},
