Notes on amphorae

--- a/assets/bibliography/general_bibliography.bib
+++ b/assets/bibliography/general_bibliography.bib
@@ -71,6 +71,24 @@
   language={English}
 }
 
+@article{ezban2012trash,
+  title={The Trash Heap of History},
+  author={Ezban, Michael},
+  journal={Places Journal},
+  year={2012},
+  month={May},
+  url={https://doi.org/10.22269/120501},
+  note={Accessed: 01 Nov 2023}
+}
+
+@book{coles1979bronze,
+  title={The Bronze Age in Europe: An Introduction to the Prehistory of Europe, c. 2000-700 BC},
+  author={Coles, J. M.},
+  year={1979},
+  publisher={Methuen},
+  address={London}
+}
+
 @article{coates2022cicero,
   title={Cicero’s Treatment of Sulla in the Pro Roscio Amerino},
   author={Coates, Gregory},
