Modified: Updated bibliography

--- a/assets/bibliography/general_bibliography.bib
+++ b/assets/bibliography/general_bibliography.bib
@@ -71,6 +71,26 @@
   language={English}
 }
 
+@article{briffault2018,
+  title = {The Challenge of the New Preemption},
+  author = {Briffault, Richard},
+  journal = {Law Review},
+  volume = {70},
+  pages = {1995},
+  year = {2018},
+}
+
+@article{tiebout1956,
+  title = {A Pure Theory of Local Expenditures},
+  author = {Tiebout, Charles},
+  journal = {Journal of Political Economy},
+  volume = {64},
+  number = {5},
+  pages = {416--424},
+  year = {1956},
+}
+
+
 @article{ezban2012trash,
   title={The Trash Heap of History},
   author={Ezban, Michael},
@@ -115,4 +135,14 @@
   volume={42},
   pages={422--431},
   year={1964}
+}
+
+@book{paglia1990sexual,
+  title        = {Sexual Personae},
+  author       = {Camille Paglia},
+  year         = {1990},
+  publisher    = {Yale University Press},
+  address      = {New Haven, CT},
+  url          = {https://www.jstor.org/stable/j.ctt1bh4bwb},
+  pages        = {712}
 }
