Added: note taking essay

--- a/assets/bibliography/general_bibliography.bib
+++ b/assets/bibliography/general_bibliography.bib
@@ -146,3 +146,35 @@
   url          = {https://www.jstor.org/stable/j.ctt1bh4bwb},
   pages        = {712}
 }
+
+
+@misc{ginter2019ulysses,
+  author = {Ginter, Josh},
+  title = {A Ulysses, Shortcuts, and Working Copy Workflow for Capturing Ideas and Publishing to a Jekyll-Based Blog},
+  year = {2019},
+  url = {https://thesweetsetup.com/a-ulysses-shortcuts-and-working-copy-workflow-for-capturing-ideas-and-publishing-to-a-jekyll-based-blog/},
+  note = {Accessed: 2025-03-12}
+}
+
+@misc{vik2020zettelkasten,
+  author = {Vik, Tomas},
+  title = {Zettelkasten note-taking in 10 minutes},
+  year = {2020},
+  url = {https://blog.viktomas.com/posts/slip-box/},
+  note = {Accessed: 2025-03-12}
+}
+
+@misc{spolsky2018gamification,
+  author = {Spolsky, Joel},
+  title = {Gamification},
+  year = {2018},
+  url = {https://www.joelonsoftware.com/2018/04/13/gamification/},
+  note = {Accessed: 2025-03-12}
+}
+
+@book{carnegie2007educating,
+  author    = {William M. Sullivan and Anne Colby and Judith Welch Wegner and Lloyd Bond and Lee S. Shulman},
+  title     = {Educating Lawyers: Preparation for the Profession of Law},
+  year      = {2007},
+  organization = {Carnegie Foundation for the Advancement of Teaching},
+}
