--- a/assets/bibliography/general_bibliography.bib
+++ b/assets/bibliography/general_bibliography.bib
@@ -166,7 +166,7 @@
 
 @misc{spolsky2018gamification,
   author = {Spolsky, Joel},
-  title = {Gamification},
+  title = {A Dustin of Gamification},
   year = {2018},
   url = {https://www.joelonsoftware.com/2018/04/13/gamification/},
   note = {Accessed: 2025-03-12}
@@ -177,4 +177,21 @@
   title     = {Educating Lawyers: Preparation for the Profession of Law},
   year      = {2007},
   organization = {Carnegie Foundation for the Advancement of Teaching},
+}
+
+@misc{georgetown2020legalacademy,
+  author = {Georgetown Law},
+  title = {Introduction to the Legal Academy},
+  year = {2020},
+  url = {https://www.law.georgetown.edu/wp-content/uploads/2020/08/Introduction-to-the-Legal-Academy.pdf},
+  note = {Accessed: 2025-03-12}
+}
+
+@book{ahrens2017smartnotes,
+  author = {Ahrens, Sönke},
+  title = {How to Take Smart Notes: One Simple Technique to Boost Writing, Learning and Thinking – for Students, Academics and Nonfiction Book Writers},
+  year = {2017},
+  publisher = {CreateSpace Independent Publishing Platform},
+  url = {https://www.soenkeahrens.de/en/takesmartnotes},
+  note = {Accessed: 2025-03-12}
 }
