--- a/assets/bibliography/general_bibliography.bib
+++ b/assets/bibliography/general_bibliography.bib
@@ -166,8 +166,8 @@
 
 @misc{spolsky2018gamification,
   author = {Spolsky, Joel},
-  title = {A Dustin of Gamification},
-  year = {2018},
+  title = {A Dusting of Gamification},
+  year = {2018},/
   url = {https://www.joelonsoftware.com/2018/04/13/gamification/},
   note = {Accessed: 2025-03-12}
 }
