--- a/assets/bibliography/general_bibliography.bib
+++ b/assets/bibliography/general_bibliography.bib
@@ -195,3 +195,12 @@
   url = {https://www.soenkeahrens.de/en/takesmartnotes},
   note = {Accessed: 2025-03-12}
 }
+
+@book{forte2022building,
+  author = {Forte, Tiago},
+  title = {Building a Second Brain: A Proven Method to Organize Your Digital Life and Unlock Your Creative Potential},
+  year = {2022},
+  publisher = {Atria Books},
+  url = {https://www.buildingasecondbrain.com/},
+  note = {Accessed: 2025-03-12}
+}
