--- a/assets/bibliography/general_bibliography.bib
+++ b/assets/bibliography/general_bibliography.bib
@@ -176,7 +176,7 @@
   author    = {William M. Sullivan and Anne Colby and Judith Welch Wegner and Lloyd Bond and Lee S. Shulman},
   title     = {Educating Lawyers: Preparation for the Profession of Law},
   year      = {2007},
-  organization = {Carnegie Foundation for the Advancement of Teaching},
+  organization = {Carnegie Foundation for the Advancement of Teaching}
 }
 
 @misc{georgetown2020legalacademy,
