--- a/assets/bibliography/general_bibliography.bib
+++ b/assets/bibliography/general_bibliography.bib
@@ -23,22 +23,23 @@
   year={1921},
   publisher={Princeton University Press},
   address={Princeton, NJ},
-  note={Reprinted in Collected Works, Vol. 6, 1923/1964}
+  note = {Originally published in 1921. Reprinted in Collected Works, Vol. 6 (1923, 1964)}
 }
 
 @book{herbert1965dune,
   title={Dune},
   author={Herbert, Frank},
   year={1965},
-  note={Penguin 2005 Edition}
+  publisher = {Chilton Books},
+  note = {Penguin 2005 Edition}
 }
 
 @misc{chaucer1400,
   author = {Chaucer, Geoffrey},
   title = {Canterbury Tales},
   howpublished = {\url{https://chaucer.fas.harvard.edu/pages/general-prologue-0}},
-  year = {c.1400},
-  note = {Accessed: 2023-07-25}
+  year = {1400},
+  note = {Written c.1400. Accessed: 2023-07-25}
 }
 
 @book{wallace2009,
@@ -50,7 +51,7 @@
 }
 
 @book{oakeshott1991,
-    author = {Michael Oakeshott},
+    author = {Oakeshott, Michael},
     title = {Rationalism in Politics and Other Essays},
     editor = {T. Fuller},
     year = {1991},
@@ -67,7 +68,6 @@
   publisher={Free Press},
   year={1992},
   isbn={978-0-02-910975-5},
-  pages={418},
   language={English}
 }
 
@@ -167,7 +167,7 @@
 @misc{spolsky2018gamification,
   author = {Spolsky, Joel},
   title = {A Dusting of Gamification},
-  year = {2018},/
+  year = {2018},
   url = {https://www.joelonsoftware.com/2018/04/13/gamification/},
   note = {Accessed: 2025-03-12}
 }
