--- a/assets/bibliography/general_bibliography.bib
+++ b/assets/bibliography/general_bibliography.bib
@@ -180,7 +180,7 @@
 }
 
 @misc{georgetown2020legalacademy,
-  author = {Georgetown Law},
+  author = {West, Robin},
   title = {Introduction to the Legal Academy},
   year = {2020},
   url = {https://www.law.georgetown.edu/wp-content/uploads/2020/08/Introduction-to-the-Legal-Academy.pdf},
