sl;dkghbj;dsfgl

--- a/assets/bibliography/general_bibliography.bib
+++ b/assets/bibliography/general_bibliography.bib
@@ -204,3 +204,13 @@
   url = {https://www.buildingasecondbrain.com/},
   note = {Accessed: 2025-03-12}
 }
+
+@book{sweigart2020automate,
+  author    = {Sweigart, Al},
+  title     = {Automate the Boring Stuff with Python: Practical Programming for Total Beginners},
+  year      = {2020},
+  publisher = {No Starch Press},
+  address   = {San Francisco, CA},
+  edition   = {2nd},
+  url       = {https://automatetheboringstuff.com}
+}
