Updated projects and blog posts

--- a/assets/bibliography/general_bibliography.bib
+++ b/assets/bibliography/general_bibliography.bib
@@ -214,3 +214,31 @@
   edition   = {2nd},
   url       = {https://automatetheboringstuff.com}
 }
+
+@incollection{seifter2022unwritten,
+  author    = {Miriam Seifter},
+  title     = {Unwritten State Constitutions? In Search of Constitutional Communities},
+  booktitle = {Amending America's Unwritten Constitution},
+  year      = {2022},
+  publisher = {Cambridge University Press}
+}
+
+@book{teles2010rise,
+  author    = {Steven M. Teles},
+  title     = {The Rise of the Conservative Legal Movement},
+  year      = {2010},
+  publisher = {Princeton University Press},
+  address   = {Princeton, NJ},
+  isbn      = {9780691146256},
+  url       = {https://press.princeton.edu/books/paperback/9780691146256/the-rise-of-the-conservative-legal-movement}
+}
+
+@book{hollis-brusky2019ideas,
+  author    = {Amanda Hollis-Brusky},
+  title     = {Ideas with Consequences: The Federalist Society and the Conservative Counterrevolution},
+  year      = {2019},
+  publisher = {Oxford University Press},
+  address   = {New York, NY},
+  isbn      = {9780190933746},
+  url       = {https://global.oup.com/academic/product/ideas-with-consequences-9780190933746}
+}
