--- a/assets/bibliography/general_bibliography.bib
+++ b/assets/bibliography/general_bibliography.bib
@@ -242,3 +242,29 @@
   isbn      = {9780190933746},
   url       = {https://global.oup.com/academic/product/ideas-with-consequences-9780190933746}
 }
+
+
+
+@misc{janoskabedi2023hello,
+  author       = {Sig Janoska-Bedi},
+  title        = {A Brief 'Hello World': Let's Get This Party Started},
+  howpublished = {\url{https://signebedi.github.io/blog/a-brief-hello-world}},
+  year         = {2023},
+  note         = {Accessed: 2025-03-17}
+}
+
+@misc{janoskabedi2023modeling,
+  author       = {Sig Janoska-Bedi},
+  title        = {Modeling a Horse Race: Abstract Approaches to Liberalism and Conservatism},
+  howpublished = {\url{https://signebedi.github.io/blog/modeling-a-horse-race}},
+  year         = {2023},
+  note         = {Accessed: 2025-03-17}
+}
+
+@misc{janoskabedi2025notes,
+  author       = {Sig Janoska-Bedi},
+  title        = {How I Take Notes and Why You Should Care},
+  howpublished = {\url{https://signebedi.github.io/blog/how-i-take-notes}},
+  year         = {2025},
+  note         = {Accessed: 2025-03-17}
+}
